<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.alumne.practicaandroid.RegisterFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_register"
        android:textSize="@dimen/sizeTextTitle"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/marginTop"
        android:id="@+id/titleRegister"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usuario"
        android:textSize="@dimen/sizeText"
        android:layout_below="@id/titleRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/marginTop"
        android:id="@+id/titleUser"
        />
    <EditText
        android:layout_width="@dimen/EditTextsize"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleUser"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/marginTop"
        android:id="@+id/campoUserNameRe"
        android:inputType="text"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Password"
        android:textSize="@dimen/sizeText"
        android:layout_below="@id/campoUserNameRe"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/marginTop"
        android:id="@+id/titlePassword"
        />
    <EditText
        android:layout_width="@dimen/EditTextsize"
        android:layout_height="wrap_content"
        android:layout_below="@id/titlePassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/marginTop"
        android:id="@+id/campoPasswordRe"
        android:inputType="textPassword"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RepeatPassword"
        android:textSize="@dimen/sizeText"
        android:layout_below="@id/campoPasswordRe"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/marginTop"
        android:id="@+id/titleRePassword"
        />
    <EditText
        android:layout_width="@dimen/EditTextsize"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleRePassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/marginTop"
        android:id="@+id/campoRePasswordRe"
        android:inputType="textPassword"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_register"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/campoRePasswordRe"
        android:layout_marginTop="@dimen/marginTop"
        android:layout_marginEnd="@dimen/marginEnd"
        android:id="@+id/RegisterButtonRe"
        />



</RelativeLayout>
